# jmedia

./: CMakeLists.txt  README.md  jmedia.pc.in
examples/: CMakeLists.txt  fullscreen.cpp  synth.cpp  teste.cpp
src/: CMakeLists.txt  jaudioconfigurationcontrol.cpp  jaudiomixercontrol.cpp  jcolorconversion.cpp  jcontrol.cpp  jframegrabberevent.cpp  jframegrabberlistener.cpp  jmedialib.cpp  jplayer.cpp  jplayerevent.cpp  jplayerlistener.cpp  jplayermanager.cpp  jsynthesizer.cpp  jvideodevicecontrol.cpp  jvideoformatcontrol.cpp  jvideosizecontrol.cpp  jvolumecontrol.cpp
src/cmake/: MediaProviders.cmake  Providers.cmake
src/include/jmedia/: jaudioconfigurationcontrol.h  jaudiomixercontrol.h  jcolorconversion.h  jcontrol.h  jframegrabberevent.h  jframegrabberlistener.h  jmedialib.h  jplayer.h  jplayerevent.h  jplayerlistener.h  jplayermanager.h  jsynthesizer.h  jvideodevicecontrol.h  jvideoformatcontrol.h  jvideosizecontrol.h  jvolumecontrol.h
src/providers/alsa/: bind.cpp  bind.h
src/providers/gif/: bind.cpp  bind.h
src/providers/gstreamer/: bind.cpp  bind.h
src/providers/ilist/: bind.cpp  bind.h
src/providers/libav/: bind.cpp  bind.h  colorspace.h  libavplay.cpp  libavplay.h
src/providers/libvlc/: bind.cpp  bind.h
src/providers/libxine/: bind.cpp  bind.h
src/providers/v4l2/: bind.cpp  bind.h  framelistener.h  videocontrol.cpp  videocontrol.h  videograbber.cpp  videograbber.h
tests/: CMakeLists.txt
